# back/src/main/java/ionic/back/dto/DTODBUsuario.java
@@ -1,0 +1,10 @@
+package ionic.back.dto;
+
+public record DTODBUsuario(
+        String email,
+        String senha
+) {
+    public DTODBUsuario(DTODadosLogin dadosLogin, String senhaEncriptada) {
+        this(dadosLogin.email(), senhaEncriptada);
+    }
+}
